<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MapsActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:clickable="true"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        card_view:umanoPanelHeight="135dp"
        card_view:umanoShadowHeight="4dp"
        android:background="#F2EEE7">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="139dp"
                android:clickable="true"
                android:src="@drawable/my_location"
                card_view:backgroundTint="#FFFFFFFF" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="208dp"
                android:clickable="true"
                android:src="@drawable/plus"
                card_view:backgroundTint="#FFFFFFFF" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="278dp"
                android:clickable="true"
                android:src="@drawable/minus"
                card_view:backgroundTint="#FFFFFFFF" />

        </fragment>

        <RelativeLayout
            android:id="@+id/card_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:orientation="vertical">


        </RelativeLayout>


    </com.sothree.slidinguppanel.SlidingUpPanelLayout>





</FrameLayout>