...

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_main"
        android:layout_below="@+id/new_card"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="20dp"
        android:layout_marginTop="-20dp"
...
        android:layout_marginBottom="-17dp"
        card_view:cardElevation="5dp"
        android:padding="10dp">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="41dp"
            android:clickable="true"
            android:src="@drawable/copy"
...
